--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,6 +18,15 @@
             android:layout_height="wrap_content"
             android:background="#E6D9D4">
 
+            <ProgressBar
+                android:layout_alignParentTop="true"
+                android:id="@+id/progress_test"
+                android:max="100"
+                android:progress="50"
+                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="3dp"/>
+
             <TextView
                 android:id="@+id/txt_complete_form"
                 android:layout_width="wrap_content"
@@ -30,6 +39,19 @@
                 android:textColor="@color/black"
                 android:textSize="24sp"
                 android:textStyle="bold" />
+
+            <Button
+                android:id="@+id/btn_main_ok"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_alignParentEnd="true"
+                android:layout_margin="10dp"
+                android:layout_marginStart="15dp"
+                android:layout_marginTop="15dp"
+                android:layout_marginEnd="15dp"
+                android:layout_marginBottom="15dp"
+                android:backgroundTint="@color/green200"
+                android:text="@string/ok" />
 
             <EditText
                 android:id="@+id/edt_first_name"
